--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -205,7 +205,7 @@
     display: none !important;}
 
 /* link */
-#context-openlinkintab, #context-openlinkinusercontext-menu, #context-openlink,
+#context-openlinkinusercontext-menu, #context-openlink,
 #context-bookmarklink, #context-savelink {
     display: none !important;}
 
