--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -6,255 +6,149 @@
 }
 
 :root {
-    --urlentries: 13;   /* adjust browser.urlbar.maxRichResults to match and browser.urlbar.matchBuckets for suggestions */
+    --urlentries: 13;   /* adjust browser.urlbar.maxRichResults (13) to match and browser.urlbar.matchBuckets (general:11,suggestion:infinity) for suggestions */
     --urlheight: 38px;  /* urlbar entry height */
 }
 
-#main-window {--toolbar-bgcolor: #343434 !important;}
-
-/* ---- urlbar dropdown ------------------------------------------------------------ */
-@-moz-document url(chrome://browser/content/browser.xul) {
-    /* urlbar dropdown placement and length */
-    #PopupAutoCompleteRichResult {
-        --uc-popup-width-diff: 159px;
-        max-width: calc(100vw - var(--uc-popup-width-diff) - var(--item-padding-end)) !important;
-        margin-left: 0px !important;
-        border-top: transparent !important;}
-  
-    /* Dropdown padding */
-    #PopupAutoCompleteRichResult .autocomplete-richlistbox {
-        padding-top: 0px !important;
-        padding-bottom: 0px !important;
-        padding-right: 0px !important;
-        padding-left: 0px !important;}
-    
-    /* Dropdown height */
-    #PopupAutoCompleteRichResult .autocomplete-richlistbox {
-        max-height: 494px !important;}
-    
-    /* Align favicons */
-    #PopupAutoCompleteRichResult .autocomplete-richlistitem .ac-type-icon {margin-left: 3px !important;}
-    #PopupAutoCompleteRichResult .autocomplete-richlistitem {margin-left: -18px !important;}
-    
-    /* Entry height */
-    #PopupAutoCompleteRichResult .autocomplete-richlistitem {
-        position: relative !important;
-        height: var(--urlheight) !important;}
-    
-    /* Entry title */
-    #PopupAutoCompleteRichResult .autocomplete-richlistitem:not([actiontype="searchengine"]) .ac-title {
-        position: absolute !important;
-        left: 54px;
-        top: 1px;
-        font-size: 14px !important;
-        margin-left: -5px !important;}
-    
-    /* Entry URL */
-    #PopupAutoCompleteRichResult .autocomplete-richlistitem:not([actiontype="searchengine"]) .ac-url,
-    #PopupAutoCompleteRichResult .autocomplete-richlistitem:not([actiontype="searchengine"]) .ac-action {
-        position: absolute !important;
-        left: 54px;
-        top: 20px;
-        font-size: 12px !important;
-        margin-left: -5px !important;}
-
-    /* Hide separator between title and URL */
-    #PopupAutoCompleteRichResult .autocomplete-richlistitem:not([actiontype="searchengine"]) .ac-separator {
-        display: none !important;}
-    
-    /* Selected item background color *//*
-    .autocomplete-richlistitem[selected=true] {background-color: #474749 !important;}*/
-    
-    /* Selected item text color *//*
-    .autocomplete-richlistitem[selected=true] .ac-title,
-    .ac-title[selected],
-    .autocomplete-richlistitem[selected=true] .ac-url,
-    .ac-url[selected],
-    .autocomplete-richlistitem[selected=true] .ac-action,
-    .ac-action[selected],
-    .autocomplete-richlistitem[selected=true] .ac-separator,
-    .ac-separator[selected] {
-        color: #e8e8e8 !important;}*/
-    
-    /* Matched text */
-    #PopupAutoCompleteRichResult .ac-emphasize-text {
-        font-weight: 400 !important;                                          /* 400 for regular, 700 for bold */
-        border-radius: 2px;                                                   /* rounded corner */
-        /*text-shadow: 0 0 currentColor;                                      /* slight shadow bolding on characters */
-        box-shadow: inset 0px 0px 5px 0px rgba(200,200,200,0.30) !important;  /* highlight color */
-        background-color: rgba(200,200,200,0.30);}
-    
-    /* Entry URL length */
-    #PopupAutoCompleteRichResult>.autocomplete-richlistbox{
-        --item-padding-start: 0px !important;
-        --item-padding-end: 0px !important;}
-    .ac-url-text{max-width:calc(100vw - var(--uc-popup-width-diff) - var(--item-padding-end) - 250px) !important;}
-    
-    /* Add scroll bar */
-    #PopupAutoCompleteRichResult .autocomplete-richlistbox > scrollbox {overflow-y: auto !important;}
-    #PopupAutoCompleteRichResult .autocomplete-richlistbox {padding-right: 0px !important;}  
+#main-window {
+    --toolbar-bgcolor: #343434 !important;
 }
-
 
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 /* ---- tab bar -------------------------------------------------------------------- */
 /*extra space at the ends*/
-.titlebar-spacer{display: none !important;}
+.titlebar-spacer { display: none }
 
-#navigator-toolbox {margin-top: -2px !important;}
+/* margin above tabs */
+#navigator-toolbox { margin-top: -2px }
 
-/* Tab toolbar adjustments */
-#TabsToolbar {
-    background: #343434 !important;
-    margin-bottom: -2px !important;  /* tab/bav bar intersection */}
-
-/* active tab edge shadow */
-.tabbrowser-tab[selected] {box-shadow: 0px 0px 10px #000 !important;}
+/* shadow on sides of active tab */
+.tabbrowser-tab[selected] { box-shadow: 0px 0px 10px #000 }
 
 /* Remove border between tabs */
-.tabbrowser-tab::after, .tabbrowser-tab::before {border-left: none !important;} 
+.tabbrowser-tab::after, .tabbrowser-tab::before { border-left: none !important } 
 
 /* tab line - default 0a84ff, orange ff760a */
-.tab-line {
-  background-color: #0a84ff !important;
-  height: 2px !important;}
-.tab-line[selected="true"] {background-color: #0a84ff !important;}
-
-/* tab text - inactive */
-.tabbrowser-tab:not([selected]) {color: #b4b4b4 !important;}
+.tab-line[selected="true"] { background-color: #0a84ff !important }
 
 /* titlebar buttons */                                                      /* WIN10 */
-.titlebar-button {padding: 8px 12px !important;}
-.titlebar-max {display: none !important;}
-.titlebar-close {margin-right: 2px !important;}
-
+.titlebar-button { padding: 8px 12px !important }
+.titlebar-max { display: none }
+.titlebar-close { margin-right: 2px !important }
 
 
 /* ---- nav bar -------------------------------------------------------------------- */
 #nav-bar {
-    padding-right: 5px !important;   /* room at the end of the navbar */
-    box-shadow: 0 0px 0 !important;  /* line between tab and nav bar */}
+    padding-right: 5px;   /* room at the end of the navbar */
+    box-shadow: 0 0px 0 !important;  /* line between tab and nav bar */
+}
 
 /* menu button */
 /* move to front of the navbar */
-#PanelUI-button {-moz-box-ordinal-group: 0 !important;}
+#PanelUI-button {
+    -moz-box-ordinal-group: 0 !important;
+}
 #PanelUI-menu-button {
     margin-left: 7px !important;
     margin-right: 1px !important;
     list-style-image: url("chrome://branding/content/icon32.png") !important;
-    -moz-window-dragging: drag !important;}
+}
 #PanelUI-menu-button > .toolbarbutton-badge-stack > .toolbarbutton-icon {
     width: 32px !important;
-    margin: -6px !important;}
+    margin: -6px !important;
+}
 
 /* menu dropdown */                                                         /* WIN10 */
-#appMenu-popup {margin-right: -258px !important;}
-#appMenu-popup .panel-arrow {margin-right: 248px !important;}
-/* menu dropdown */                                                           /* MAC */
-/*#appMenu-popup {margin-right: -237px !important;}
-#appMenu-popup .panel-arrow {margin-right: 230px !important;}
+#appMenu-popup, #BMB_bookmarksPopup {
+    margin-right: -258px !important;
+}
+.panel-arrow { display: none }
 
-/* hide update notification, banner, and badge */
-#appMenu-notification-popup {display:none !important;}
-.panel-banner-item[notificationid^="update"] {display:none;}
-#appMenu-fxa-container {margin-top: 0 !important;}
-.toolbarbutton-badge {display: none !important;}
+/* menu dropdown */                                                           /* MAC */
+/* #appMenu-popup, #BMB_bookmarksPopup {
+    margin-right: -237px !important;
+}
+.panel-arrow { display: none }*/
 
 /* Back & Forward buttons */ 
 #back-button > .toolbarbutton-icon,
 #forward-button > .toolbarbutton-icon,
-#history-panelmenu > .toolbarbutton-icon,
-#stop-reload-button > .toolbarbutton-1{
-    transform: scale(.9) !important;}
-/*#back-button > .toolbarbutton-icon,*/
-#forward-button > .toolbarbutton-icon,
-#history-panelmenu > .toolbarbutton-icon,
-#stop-reload-button > .toolbarbutton-1 {
-    margin-left: -2px !important;}
-#stop-reload-button > .toolbarbutton-1 {margin-right: -2px !important;}
-
-/* url bar */
-#urlbar, .searchbar-textbox {
-    font-size: 1em !important;
-    border: none !important;}
-#identity-icon-labels {display: none !important;}
-
+#stop-reload-button > toolbarbutton > .toolbarbutton-icon,
+#sidebar-button > .toolbarbutton-icon,
+#bookmarks-menu-button > .toolbarbutton-icon
+{transform: scale(.9)}
 
 
 /* ---- bookmarks bar -------------------------------------------------------------- */
 #PersonalToolbar {
     margin-top: -1px !important;
-    margin-bottom: -1px !important; 
-    margin-left: -2px !important;                                           /* WIN10 */
-    min-height: 26px !important;}
-
+    margin-bottom: 0px !important;                                         /* WIN10 */
+    min-height: 26px !important;
+}
 
 
 /* ---- hide context menu items ---------------------------------------------------- */
-/* right click */
-#context-back, #context-forward,
-#context-savepage,
-#context-sep-sendpagetodevice,
-#context-selectall, #context-viewsource,
-#context-inspect, #inspect-separator,
-#screenshots_mozilla_org-menuitem-_create-screenshot {
-    display: none !important}
+/* general */
+#context-navigation,
+#context-sep-navigation,
+#context-selectall,
+#context-inspect-a11y,
+#screenshots_mozilla_org-menuitem-_create-screenshot
+{display: none}
 
-/* highlight */
-#context-viewpartialsource-selection,
-#context-sep-selectall {
-    display: none !important;}
+/* page */
+#context-savepage,
+#context-pocket,
+#context-sep-sendpagetodevice,
+#context-viewsource
+{display: none}
+
+/* highlight text */
+#context-print-selection,
+#context-viewpartialsource-selection
+{display: none !important}
 
 /* link */
-#context-openlinkinusercontext-menu, #context-openlink,
-#context-bookmarklink, #context-savelink {
-    display: none !important;}
+#context-openlinkintab,
+#context-openlinkinusercontext-menu,
+#context-bookmarklink,
+#context-savelink,
+#context-savelinktopocket 
+{display: none}
 
 /* images */
 #context-sendimage,
-#context-setDesktopBackground {
-    display: none !important;}
+#context-sep-setbackground,
+#context-setDesktopBackground 
+{display: none}
 
 /* text entry */
-#context-cut, #context-delete,
-#spell-separator, #spell-dictionaries {
-    display: none !important;}
+#context-cut,
+#context-delete,
+#spell-separator,
+#spell-check-enabled
+{display: none}
 
 /* tab */
 #context_reloadTab,
+#context_reloadSelectedTabs,
 #context_pinTab,
-#context_reloadAllTabs, #context_bookmarkAllTabs,
-#toolbar-context-bookmarkAllTabs {
-    display: none !important;}
-
-/* bookmarks */
-#placesContext_new\:bookmark,
-#placesContext_sortBy\:name, #placesContext_sortSeparator {
-    display: none !important;}
-
-/* menu button */
-#appMenu-customize-button {
-    display: none !important;}
-
+#context_pinSelectedTabs,
+#context_bookmarkTab,
+#context_bookmarkSelectedTabs,
+#context_reopenInContainer,
+#context_undoCloseTab
+{display: none}
 
 
 /* ---- misc ----------------------------------------------------------------------- */
-/* Bookmarks toolbar popup */
-#BMB_viewBookmarksSidebar,                     /* View Sidebar */
-#BMB_bookmarksShowAllTop,                      /* Show All bookmarks */
-#BMB_bookmarksShowAllTop + menuseparator,      /* Show All bookmarks separator */
-#BMB_bookmarksToolbar,                         /* Toolbar entry */
-#BMB_unsortedBookmarks,                        /* Other bookmarks */
-#BMB_mobileBookmarks +menuseparator,           /* separator 2 */
-#BMB_bookmarksPopup menu[label="Recent Tags"]  /* Recent Tags */
-/*#BMB_bookmarksShowAll                          /* Show all footer */{
-    display: none !important;}
+/* hides the update popup */
+#appMenu-notification-popup {
+    display: none !important;
+}
 
-/* flexible space */ toolbarspring {
+/* flexible space - makes it smaller */ 
+toolbarspring {
     min-width: 2px !important;
     max-width: 2px !important;}
-
-/*Disable White Flash of Death*/
-browser[type="content"][primary="true"], tabbrowser tabpanels, #appcontent > #content {
-background-color: var(--ui-basecolor) !important;}
