adjusted bookmarks bar animation

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -64,20 +64,17 @@
 #appMenu-popup, #BMB_bookmarksPopup {
     margin-right: -258px !important;
 }
-.panel-arrow { display: none }
-
 /* menu dropdown */                                                           /* MAC */
 /* #appMenu-popup, #BMB_bookmarksPopup {
     margin-right: -237px !important;
-}
-.panel-arrow { display: none }*/
+} */
+.panel-arrow { display: none }
 
 /* Back & Forward buttons */ 
 #back-button > .toolbarbutton-icon,
 #forward-button > .toolbarbutton-icon,
 #stop-reload-button > toolbarbutton > .toolbarbutton-icon,
-#sidebar-button > .toolbarbutton-icon,
-#bookmarks-menu-button > .toolbarbutton-icon
+#sidebar-button > .toolbarbutton-icon
 {transform: scale(.9)}
 
 /* url bar */
@@ -90,13 +87,13 @@
     margin-bottom: 0px !important;                                         /* WIN10 */
     min-height: 0px !important;
     max-height: 0px !important;
-    transition: min-height 0.2s, max-height 0.2s;
+    transition: min-height 0.25s, max-height 0.25s;
+    transition-timing-function: cubic-bezier(0, 0, .1, 1);
 }
 
 #navigator-toolbox:hover #PersonalToolbar {
-    min-height: 28px !important;
-    max-height: 28px !important;
-    transition-delay: .2s;
+    min-height: 42px !important;
+    max-height: 42px !important;
 }
 
 
